robballen75-Salesforce/4-7-15/src/objects/Acct_Proj_Custom_Rollup__c.object
<CustomObject>
    <description>Custom object used to store project and account related information for the generation of the DocXTools Healthcheck score. The data is used by rollup summary and formula fields on the Account object to calculate the number of total training/consulting hours for projects that meet a specific criteria. Only data for the most recent 12 months are used, so records are purged when they hit that timeframe.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Master-Child record to associated Account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account-Project Custom Rollup</relationshipLabel>
        <relationshipName>Account_Project_Custom_Rollup</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Hours_Logged_Total__c</fullName>
        <description>Formula field used by the KP Health check scoring system.  The value is the total number of billable and non-billable hours currently logged on the project.</description>
        <formula>project_hours_logged_f__c +  project_hours_logged_non_billable_f__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Hours Logged - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <description>Date specified as the start date for the project. The value is automatically populated via a trigger using the corresponding field value on the project record.</description>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <description>Current status of the project. The value is automatically populated via a trigger using the corresponding field value on the project record.</description>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending CR Followup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Complete - Pending CR Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Upgrade Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <description>Type of project. The value is automatically populated via a trigger using the corresponding field value on the project record.</description>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Master-Child record to the associated Project.</description>
        <label>Project</label>
        <referenceTo>MS_Project__c</referenceTo>
        <relationshipLabel>Account-Project Custom Rollup</relationshipLabel>
        <relationshipName>Account_Project_Custom_Rollup</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purge_Date__c</fullName>
        <description>Formula field used by the KP Health check scoring system. The value represents the date on which the data in the record is no longer relevant and should be purged.</description>
        <formula>Project_Start_Date__c + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>proj_hrs_logged_billable_not_chargeable__c</fullName>
        <description>Number of non-billable hours currently logged on the project. The value is automatically populated via a trigger using the corresponding field value on the project record.</description>
        <label>Hrs Logged-BILLABLE (Not Chargeable)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_hours_logged_f__c</fullName>
        <description>Number of billable hours currently logged on the project. The value is automatically populated via a trigger using the corresponding field value on the project record.</description>
        <label>Project Hours Logged - BILLABLE (f)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_hours_logged_non_billable_f__c</fullName>
        <description>Number of non-billable hours currently logged on the project. The value is automatically populated via a trigger using the corresponding field value on the project record.</description>
        <label>Project Hours Logged - NON BILLABLE (f)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Account-Project Custom Rollup</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Account-Project CRU ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account-Project Custom Rollup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>